bottom panel spacing fix

--- a/public/game/index.css
+++ b/public/game/index.css
@@ -171,4 +171,5 @@ html, body {
   transform-origin: top center;
   transition: transform 250ms cubic-bezier(0.4, 0, 1, 1) 400ms;
   z-index: 2;
+  top: -1px;
 }
